feat: 解决vue项目中使用@符号没有路径提示问题

--- a/package.json
+++ b/package.json
@@ -19,5 +19,19 @@
     "@vitejs/plugin-vue": "^5.0.4",
     "arco-cli": "^1.27.5",
     "vite": "^5.2.9"
-  }
+  },
+  "compilerOptions": {
+    "target": "ES6",
+    "module": "commonjs",
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": "./",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
