--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build-with-oss": "vite build",
     "preview": "vite preview",
     "prepare": "husky install",
-    "deploy": "node deploy.js"
+    "deploy": "node deploy.js",
+    "upload-oss": "node scripts/upload-to-oss.js",
+    "upload-oss-force": "ENABLE_OSS=true node scripts/upload-to-oss.js"
   },
   "dependencies": {
     "@icon-park/vue-next": "^1.4.2",
@@ -28,8 +31,11 @@
     "ali-oss": "^6.20.0",
     "arco-cli": "^1.27.5",
     "file-loader": "^6.2.0",
+    "glob": "^10.3.10",
     "husky": "^9.1.6",
+    "mime-types": "^2.1.35",
     "ssh2-sftp-client": "^11.0.0",
+    "terser": "^5.28.1",
     "unplugin-auto-import": "^0.17.6",
     "unplugin-icons": "^0.19.0",
     "unplugin-vue-components": "^0.27.0",
@@ -50,10 +56,5 @@
   },
   "exclude": [
     "node_modules"
-  ],
-  "husky": {
-    "hooks": {
-      "pre-commit": "npm test"
-    }
-  }
+  ]
 }
