--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "glob": "^10.3.10",
     "husky": "^9.1.6",
     "mime-types": "^2.1.35",
+    "ssh2": "^1.17.0",
     "ssh2-sftp-client": "^11.0.0",
     "terser": "^5.28.1",
     "unplugin-auto-import": "^0.17.6",
